==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed a race condition which could cause ``KILL (ALL)`` to terminate a node
   instead of interrupting a query.

 - Log failed authentication attempts at log level ``WARN``
