@@ -1,0 +1,55 @@
+/*
+ * Licensed to Crate under one or more contributor license agreements.
+ * See the NOTICE file distributed with this work for additional
+ * information regarding copyright ownership.  Crate licenses this file
+ * to you under the Apache License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License.  You may
+ * obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+ * implied.  See the License for the specific language governing
+ * permissions and limitations under the License.
+ *
+ * However, if you have executed another commercial license agreement
+ * with Crate these terms will supersede the license and you may use the
+ * software solely pursuant to the terms of the relevant commercial
+ * agreement.
+ */
+
+package io.crate.planner.projection;
+
+import io.crate.operation.Paging;
+import org.junit.Test;
+
+import java.util.Collections;
+import java.util.TreeMap;
+
+import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertThat;
+
+public class FetchProjectionTest {
+
+    @Test
+    public void testFetchSizeHasUpperBound() throws Exception {
+        assertThat(getFetchProjection(0).getFetchSize(), is(Paging.PAGE_SIZE));
+
+        assertThat(getFetchProjection(Integer.MAX_VALUE).getFetchSize(), is(Paging.PAGE_SIZE));
+    }
+
+
+    private static FetchProjection getFetchProjection(int fetchSize) {
+        return new FetchProjection(
+                1,
+                fetchSize,
+                Collections.emptyMap(),
+                Collections.emptyList(),
+                Collections.emptyMap(),
+                new TreeMap<>(),
+                Collections.emptyMap()
+            );
+    }
+}
